remove the the text device-width

--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
 
     <body>
         <h1>Odin Recipes</h1>
-    </body>
+        
+        <a href="./recipes/chocolate-chips-cookies.html">Chocolate Chips Cookies</a>
+    </body>device-width
 </html>
