add image on recipe content, description, and steps

--- a/index.html
+++ b/index.html
@@ -10,5 +10,5 @@
         <h1>Odin Recipes</h1>
         
         <a href="./recipes/chocolate-chips-cookies.html">Chocolate Chips Cookies</a>
-    </body>device-width
+    </body>
 </html>
