--- a/recipes/chocolate-chips-cookies.html
+++ b/recipes/chocolate-chips-cookies.html
@@ -30,22 +30,15 @@
                 <li>Chocolate chips</li>
                 <li>Nuts (optional)</li>
             </ul>
-           
-
-        <br>
-
+ 
         <h2>Steps</h2>
 
             <ol>
                 <li>Beat the butter and sugars, then beat in the eggs and vanilla.</li>
-                <li>Dissolve the baking soda in hot water and add to the mixture.
-                </li>
-                <li>Stir in the flour, chocolate chips, and walnuts.
-                </li>
-                <li>Drop dough onto a prepared baking sheet.
-                </li>
-                <li>Bake until the edges are golden brown.
-                </li>
+                <li>Dissolve the baking soda in hot water and add to the mixture.</li>
+                <li>Stir in the flour, chocolate chips, and walnuts.</li>
+                <li>Drop dough onto a prepared baking sheet.</li>
+                <li>Bake until the edges are golden brown.</li>
             </ol>
     </body>
 </html>
